[fix] Filter check box

--- a/pages/sale.html
+++ b/pages/sale.html
@@ -62,7 +62,10 @@
                         </div>
                         <div class="dropdown-container">
                             <div class="dropdown">
-                                <button class="dropbtn">Brand<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
+                                <input type="checkbox" id="dropdown-checkbox-1" class="dropdown-checkbox">
+                                <label for="dropdown-checkbox-1" class="dropbtn">Brand
+                                    <img src="../assets/angle-small-down.png" alt="dropdown button">
+                                </label>
                                 <div class="dropdown-content">
                                     <div class="each-input">
                                         <input type="checkbox" id="hill" name="hill" value="Hill">
@@ -87,7 +90,10 @@
                                 </div>
                             </div>
                             <div class="dropdown">
-                                <button class="dropbtn">Product type<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
+                                <input type="checkbox" id="dropdown-checkbox-2" class="dropdown-checkbox">
+                                <label for="dropdown-checkbox-2" class="dropbtn">Product type
+                                    <img src="../assets/angle-small-down.png" alt="dropdown button">
+                                </label>
                                 <div class="dropdown-content">
                                     <div class="each-input">
                                         <input type="checkbox" id="dog-food" name="dog-food" value="Dog-food">
@@ -97,11 +103,13 @@
                                         <input type="checkbox" id="cat-food" name="cat-food" value="Cat-food">
                                         <label for="cat-food">Cat Food</label><br>
                                     </div>
-                                    
                                 </div>
                             </div>
                             <div class="dropdown">
-                                <button class="dropbtn">Availability<img src="../assets/angle-small-down.png" alt="dropdown button"></button>
+                                <input type="checkbox" id="dropdown-checkbox-3" class="dropdown-checkbox">
+                                <label for="dropdown-checkbox-3" class="dropbtn">Availability
+                                    <img src="../assets/angle-small-down.png" alt="dropdown button">
+                                </label>
                                 <div class="dropdown-content">
                                     <input type="checkbox" id="in-stock" name="in-stock" value="In-stock">
                                     <label for="in-stock">In stock</label><br>
