--- a/pages/404.html
+++ b/pages/404.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="http://localhost/css/desktop.css">
-    <link rel="stylesheet" type="text/css" href="http://localhost/css/tablet.css">
+    <link rel="stylesheet" type="text/css" href="../css/desktop.css">
+    <link rel="stylesheet" type="text/css" href="../css/tablet.css">
     <link rel="stylesheet" type="text/css" href="../css/mobile.css">
     <title>Page Not Found</title>
 </head>
