[fix] Added payment options

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -141,7 +141,8 @@
                         </h2>
                         <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                                At petsmart.ca, we accept all major forms of credit cards, as well as several other forms of payment:
+                                At petsmart.ca, we accept all major forms of credit cards, as well as several other forms of payment: American Express, MasterCard,
+                                Visa, PayPal and Gift Card
                             </div>
                         </div>
                     </div>
