--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/desktop.css">
-    <link rel="stylesheet" type="text/css" href="../css/tablet.css">
+    <link rel="stylesheet" type="text/css" href="./css/tablet.css">
     <link rel="stylesheet" type="text/css" href="./css/mobile.css">
     <title>Welcome to PawsomeBites</title>
 </head>
