[fix] Fixed links for index

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </nav>
             <nav class="icon-nav">
                 <ul class="horizontal-list">
-                    <li><img src="../assets/user.png" alt="User icon"></li>
-                    <li><img src="../assets/heart.png" alt="Heart icon"></li>
-                    <li><img src="../assets/shopping-cart.png" alt="Shopping cart icon"></li>
+                    <li><img src="./assets/user.png" alt="User icon"></li>
+                    <li><img src="./assets/heart.png" alt="Heart icon"></li>
+                    <li><img src="./assets/shopping-cart.png" alt="Shopping cart icon"></li>
                     <li class="menu">
-                        <label for="menu-toggle"><img src="../assets/menu-burger.png" alt="Menu bar"></label>
+                        <label for="menu-toggle"><img src="./assets/menu-burger.png" alt="Menu bar"></label>
                         <input type="checkbox" class="menu-toggle" id="menu-toggle">
                         <nav class="toggle-nav">
                             <ul class="link-list">
